src/adaptive-cards-renderer/tests/snapshots/snapshot_tests__snapshots@container_multiple_item_bleed.card.json.snap
---
source: adaptive-cards-renderer/tests/snapshot_tests.rs
expression: card
input_file: adaptive-cards-renderer/tests/snapshot_inputs/container_multiple_item_bleed.card.json
---
{
  "$schema": "http://adaptivecards.io/schemas/adaptive-card.json",
  "body": [
    {
      "type": "Container",
      "bleed": true,
      "items": [
        {
          "type": "TextBlock",
          "text": "1",
          ".layout": {
            "rect": {
              "x": 12,
              "y": 12,
              "width": 100,
              "height": 10
            },
            "placement": "SoleVertical"
          }
        }
      ],
      "style": "accent",
      ".layout": {
        "rect": {
          "x": 0,
          "y": 0,
          "width": 150,
          "height": 34
        },
        "placement": "Top"
      }
    },
    {
      "type": "Container",
      "bleed": true,
      "height": "stretch",
      "items": [
        {
          "type": "TextBlock",
          "text": "2",
          ".layout": {
            "rect": {
              "x": 12,
              "y": 58,
              "width": 100,
              "height": 10
            },
            "placement": "SoleVertical"
          }
        }
      ],
      "style": "accent",
      ".layout": {
        "rect": {
          "x": 0,
          "y": 46,
          "width": 150,
          "height": 232
        },
        "placement": "WithinVertical"
      }
    },
    {
      "type": "Container",
      "bleed": true,
      "items": [
        {
          "type": "TextBlock",
          "text": "3",
          ".layout": {
            "rect": {
              "x": 12,
              "y": 302,
              "width": 100,
              "height": 10
            },
            "placement": "SoleVertical"
          }
        }
      ],
      "style": "accent",
      ".layout": {
        "rect": {
          "x": 0,
          "y": 290,
          "width": 150,
          "height": 34
        },
        "placement": "Bottom"
      }
    }
  ],
  "version": "1.5",
  "type": "AdaptiveCard",
  ".layout": {
    "rect": {
      "x": 0,
      "y": 0,
      "width": 150,
      "height": 300
    }
  }
}
